@@ -16,6 +16,7 @@ import javax.swing.text.html.Option;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Repository
 public class ProductDAO {
@@ -33,7 +34,7 @@ public class ProductDAO {
     @Autowired
     private ISpec _spec;
     public List<ProductListDTO>getProductList(int limit, int offset,String type){
-        List<Product>products=_product.findAll().stream().skip(offset).limit(limit).toList();
+        List<Product> products=_product.findAll().stream().skip(offset).limit(limit).collect(Collectors.toList());
         List<ProductListDTO>productListDTOS = new ArrayList<>();
 
         for(Product product : products){
